emf-agent/src/action_plugins/high_availability/snapshots/emf_agent__action_plugins__high_availability__corosync_conf__tests__update_config_version.snap
---
source: emf-agent/src/action_plugins/high_availability/corosync_conf.rs
expression: conf
---
totem {
    version: 2
    config_version: 10
    cluster_name: lustre-ha-cluster
    secauth: off
    transport: udp
    rrp_mode: passive
    token: 17000
    fail_recv_const: 10

    interface {
        ringnumber: 0
        bindnetaddr: 10.128.0.0
        mcastaddr: 226.94.0.1
        mcastport: 40015
    }

    interface {
        ringnumber: 1
        bindnetaddr: 10.73.10.0
        mcastaddr: 226.94.1.1
        mcastport: 40015
    }
}

nodelist {
    node {
        ring0_addr: 10.128.0.21
        nodeid: 1
    }

    node {
        ring0_addr: 10.128.0.22
        nodeid: 2
    }
}

quorum {
    provider: corosync_votequorum
    two_node: 1
}

logging {
    to_logfile: yes
    logfile: /var/log/cluster/corosync.log
    to_syslog: yes
}
